# seagull-engine

./: CMakeLists.txt  README.md  conanfile.txt  seagull-engine.code-workspace
example-projects/: CMakeLists.txt
example-projects/digbuild/: CMakeLists.txt
example-projects/digbuild/src/: main.cpp
include/seagull/: gameObject.h  mesh.h  point.h  seagull.h  texture.h
src/: gameObject.cpp  renderer.cpp  seagull.cpp  seagull_internal.h  shaders.cpp  texture.cpp
src/include/: gameObject_internal.h  mathHelper.h  matrixHelper.h  renderer.h  seagull_internal.h  shaders.h
tools/digbuild/texture-composer/: CMakeLists.txt  composer.cpp
tools/texture-composer/: conanfile.txt
